# words

./: .gitignore  LICENSE  Makefile  setup.cfg  setup.py
test/: benchmark.py  sandbox.ipynb  test.py
words/: words.py
words/words/: words.py
