[metadata]
name = words
version = 0.0.1
author = jskeys
author_email = donny.creamer@gmail.com
description = Tools for guessing words
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jskeys/words
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
